--- a/src/styles/SideBar.module.css
+++ b/src/styles/SideBar.module.css
@@ -1,14 +1,9 @@
 .sideBar {
+    top: 120px;
     position: fixed;
     width: 250px;
     height: 100%;
     /* display: flex; */
     padding: 20px;
     padding-top: 50px;
-}
-
-.menuShow {
-    position : fixed;
-    top: 1rem;
-    left: 1rem;
 }
