--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,13 +1,11 @@
 .logoImg {
     width: 200px;
     height: 120px;
-}.container {
-    display: flex;
-    justify-content: space-between;
 }
 
-.logBox {
-    margin-left: 30px;
+.container {
+    display: flex;
+    justify-content: space-between;
 }
 
 .logoImg {
@@ -78,4 +76,9 @@
 .logTxt {
     cursor: pointer;
     color: #c0c0c0;
+}
+
+.menuShow {
+    margin-top: 30px;
+    margin-left: 25px;
 }
