--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -104,3 +104,11 @@ p:hover {
 .deledit svg {
   font-size: 25px;
 }
+.comment_box {
+  padding: 10px;
+  width: 100%;
+  height: 100px;
+  border: 1px solid black;
+  border-radius: 10px;
+  font-size: 17px;
+}
