--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -12,13 +12,16 @@ button {
   border: none;
 }
 .profile {
-  background-color: aqua;
   width: 40px;
-  height: 40px;
-  border-radius: 100%;
+  height: 180px;
   float: left;
-  margin-right: 10px;
-  margin-top:5px;
+  margin-right: 15px;
+  overflow: hidden;
+}
+.profImg {
+  width: 45px;
+  height: 45px;
+  border-radius: 100%;
 }
 .feed {
     color: #4a4a4a;
