--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -13,14 +13,16 @@ button {
 }
 .profile {
   width: 40px;
-  height: 180px;
+  height: 40px;
+  border-radius: 100%;
   float: left;
-  margin-right: 15px;
-  overflow: hidden;
+  margin-right: 10px;
+  margin-top:5px;
 }
+
 .profImg {
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
   border-radius: 100%;
 }
 .feed {
