--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -12,13 +12,13 @@ button {
   border: none;
 }
 .profile {
-  background-color: aqua;
   width: 40px;
   height: 40px;
   border-radius: 100%;
   float: left;
   margin-right: 10px;
   margin-top:5px;
+  overflow: hidden;
 }
 .feed {
     color: #4a4a4a;
@@ -41,10 +41,13 @@ button {
   font-size: 30px;
 }
 .content {
+  height: auto;
   font-size: 20px;
   line-height: 25px;
   word-break: break-all;
+  outline: none;
 }
+
 .other_container {
   width: 100%;
   height: 50px;
@@ -71,18 +74,21 @@ button {
 }
 .comment {
   width: 80px;
-  height: 40px;
+  height: 43px;
   float: left;
   margin-left: 30px;
-  border: solid 2px rgba(163, 163, 163, 0.2);
+  margin-top: -2px;
+  border: solid 1px rgba(163, 163, 163, 0.2);
   border-radius: 5px;
-  padding: 0 10px;
   line-height: 40px;
+  text-align: center;
 }
 .comment svg {
   margin-left: 10px;
   margin-right: 10px;
+  margin-top: 10px;
 }
+
 svg {
   font-size: 20px;
 }
@@ -95,7 +101,7 @@ p:hover {
 .deledit {
   width: 80px;
   height: 40px;
-  border: solid 2px rgba(163, 163, 163, 0.2);
+  border: solid 1px rgba(163, 163, 163, 0.2);
   border-radius: 5px;
   float: right;
   font-size: 20px;
@@ -107,18 +113,19 @@ p:hover {
 .comment_box {
   padding: 10px;
   margin: 10px;
-  width: 95%;
+  width: 97.5%;
   height: 100px;
-  border: 1px solid black;
+  border: 1px solid #e0e0e0e0;
   border-radius: 10px;
   font-size: 17px;
+  margin-left: -3px;
 }
 .commentBtn {
   position: relative;
   bottom: 10px;
   left: 89%;
   background: none;
-  border: 1px solid rgb(155, 155, 155);
+  border: 1px solid #e0e0e0e0;
   border-radius: 10px;
   width: 70px;
   height: 40px;
@@ -141,7 +148,7 @@ textarea {
 .editCancelBtn{
   float: right;
   background: none;
-  border: solid 2px rgb(0, 0, 0);
+  border: solid 1px rgb(0, 0, 0);
   font-size: 20px;
   margin: 10px;
 }
