--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -37,15 +37,24 @@ button {
 .username {
   font-size:15px;
 }
+
+.contentContainer {
+  padding-top: 5px;
+}
+
 .title {
-  font-size: 30px;
+  font-size: 23px;
+  color: #494949;
 }
 .content {
   height: auto;
-  font-size: 20px;
+  font-size: 15px;
   line-height: 25px;
   word-break: break-all;
   outline: none;
+  margin-left: 8px;
+  margin-top: -5px;
+  color: #6c6c6c;
 }
 
 .other_container {
