--- a/src/styles/uploadFeedPage.module.css
+++ b/src/styles/uploadFeedPage.module.css
@@ -1,12 +1,13 @@
 .container {
     display: flex;
     justify-content: center;
-    max-width: 800px;
-    min-width: 600px;
+    width: 100%;
+    height: 200px;
     margin: 0 auto;
     border-bottom: 1px solid rgb(228, 228, 228);
     padding: 20px;
     margin-bottom: 20px;
+    background-color: aliceblue;
 }
 
 .uploadContainer {
@@ -24,4 +25,9 @@
     margin-top:5px;
     overflow: hidden;
     float: left;
+}
+
+.feedContent {
+    width: 100%;
+    height: 150px;
 }
