전체적인 css 수정

--- a/src/styles/SideBar.module.css
+++ b/src/styles/SideBar.module.css
@@ -1,11 +1,12 @@
 .sideBar {
-    top: 120px;
+    top: 60px;
     position: fixed;
     width: 250px;
     height: 100%;
-    /* display: flex; */
+    display: flex;
     padding: 20px;
     padding-top: 50px;
+    border-right: 2px solid #ececec;
 }
 @media screen and (min-width: 1400px) {
     .sideBar {
