--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -4,7 +4,15 @@
 }
 
 .container {
+    position: fixed;
     display: flex;
+    background-color: white;
+    width: 100%;
+    height: 100px;
+    /* 맨 앞에 표시되도록 */
+    z-index: 100;
+    border-bottom : 2px solid #ececec;
+    top: 0px;
 }
 
 .between {
@@ -14,8 +22,8 @@
 }
 
 .logoImg {
-    width: 200px;
-    height: 120px;
+    width: 180px;
+    height: 100px;
     cursor: pointer;
     margin-left: 20px;
 }
@@ -82,14 +90,14 @@
 }
 
 .menuShow {
-    margin-top: 45px;
+    margin-top: 35px;
     margin-left: 25px;
 }
 
 .profileBox {
     display: flex;
     justify-content: space-between;
-    margin-right: 25px;
+    margin-right: 80px;
     margin-left: 30px;
     margin-top: 15px;
     width: 300px;
