--- a/src/styles/FeedPage.module.css
+++ b/src/styles/FeedPage.module.css
@@ -1,47 +1,71 @@
 .feed_container {
-  width: 60%;
+  width: 55%;
   min-width: 800px;
   min-height: 1000px;
-  margin:0 auto;
+  margin: 120px auto;
 }
+
 .feed_content_box {
   width: 100%;
   min-height: 500px;
+  padding: 10px;
 }
+
 .feed_content_title {
   font-size: 25px;
 }
+
 .feed_content_text {
   font-size: 15px;
 }
+
 .feed_author {
   display: flex;
   width: 100%;
   height: 60px;
 
 }
+
 .feed_profile_img {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 100%;
-  background-color: aqua;
+  overflow: hidden;
 }
+
 .feed_author_name {
   margin-left: 10px;
 }
+
 .feed_created_at {
   font-size: 12px;
   line-height: 30px;
   margin-left: 15px;
 }
+
 .feed_content {
   min-height: 500px;
 }
+
 .feed_comment_box {
   width: 100%;
   height: 600px;
 }
+
 .feed_comment_form {
   width: 100%;
   height: 100px;
+  margin: 60px 0 ;
+}
+
+.feed_profimg {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+}
+.feed_comment_text {
+  width: 100%;
+  height: 100px;
+  border: 1px rgb(139, 139, 139, .5) solid;
+  border-radius: 10px;
 }
