--- a/src/styles/comment.module.css
+++ b/src/styles/comment.module.css
@@ -1,15 +1,16 @@
 .feed_comment_box {
   width: 100%;
   min-height: 100px;
+  margin-bottom: 20px;
 }
 .feed_comment_info {
   display: flex;
 }
 .feed_comment_profile {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 100%;
-  background-color: aqua;
+  overflow: hidden;
 }
 .feed_comment_author {
   font-size: 15px;
